# advent-of-code

2024/: CMakeLists.txt
2024/01/: part1.cpp  part2.cpp
2024/02/: part1.cpp  part2.cpp
2024/03/: part1.cpp  part2.cpp
2024/04/: part1.cpp  part2.cpp
2024/05/: part1.cpp  part2.cpp
2024/06/: input.txt4  out.txt  part1.cpp  part2.cpp
2024/07/: part1.cpp  part2.cpp
2024/08/: part1.cpp  part2.cpp
2024/09/: part1.cpp  part2.cpp
2024/10/: part1.cpp  part2.cpp
2024/11/: part1.cpp  part2.cpp
