set(CMAKE_CXX_STANDARD 11)

add_executable(01_part1 01/part1.cpp)
add_executable(01_part2 01/part2.cpp)

add_executable(02_part1 02/part1.cpp)
add_executable(02_part2 02/part2.cpp)

add_executable(03_part1 03/part1.cpp)
add_executable(03_part2 03/part2.cpp)

add_executable(04_part1 04/part1.cpp)
add_executable(04_part2 04/part2.cpp)

add_executable(05_part1 05/part1.cpp)
add_executable(05_part2 05/part2.cpp)

